--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "❄️ SUBZERO MD ❄️",
+  "name": "❄️ MYSTERIOUS MD ❄️",
   "description": "ICY COLD W.A BOT BY MR FRANJ",
   "logo": "https://i.postimg.cc/m2jtqrBC/Screenshot-20241216-090753-Video-Maker.jpg",
   "keywords": ["bot"],
